Worked on login/logout procedures. Fixed visibility:hidden in ajax.php. started markup of bizbank eboardportal. quite a lot of changes in this commit..

--- a/trunk/src/bizbank/eBoardPortal/layout.css
+++ b/trunk/src/bizbank/eBoardPortal/layout.css
@@ -1,13 +1,45 @@
 body
 {
+   margin-top: 15px;
    color: #555;
    font-family: sans-serif;
    font-size: 12px;
 }
 
-#content
+#contentholder
 {
+   width: 900px;
    margin: auto;
-   width: 800px;
-   border: 1px solid #eee;
+}
+
+div.content
+{
+   width: 900px;
+   float: left;
+   border: 1px dotted #ccc;
+}
+
+div.toprow
+{
+   width: 870px;
+   float: left;
+   margin: 15px;
+}
+
+div.login
+{
+   width: 250px;
+   float: left;
+}
+
+div.banner
+{
+   width: 400px;
+   float: left;
+}
+
+div.helpinfo
+{
+   width: 150px;
+   float: left;
 }
